--- a/flaskr/templates/show_entries.html
+++ b/flaskr/templates/show_entries.html
@@ -17,57 +17,60 @@
 <style>
  button{
      border:none;
-     background-color:transparant;
+     background-color:transparent;
      outline:none;
-     width:50px;
-     height:50px;
-       }
+     width:  7em;
+     height: 7em;
+ }
  table {
     font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 40%;
-}
+    /*border-collapse: collapse;*/
+    /*width: 40%;*/
+ }
 
  td, th {
     border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+    /*text-align: left;
+    padding: 8px;*/
 }
 
- tr:nth-child(even) {
-   background-color: #dddddd;
-}
 </style>
-      <progress value="70" max="100">70 %</progress>
-      </br>
-      <button type="PLAY" onclick="play()" width=50><img src="{{ url_for('static', filename='images/playbutton.png') }}" width="100%" /></button>
-      <audio id="audio" src="{{ url_for('static', filename='audio/test.wav') }}"></audio>
-      <table width='40%' align="right">
-        <tr>
-          <th>File.wav</th>
-        </tr>
-        <tr>
-          <th>Length</th> 
-        </tr>
-        <tr>
-          <th>spkr</th>
-        </tr>
-        <tr>
-		  <th>label</th>
-        </tr>
-        <tr>
-          <th>on/off</th>
-        </tr>
-      </table>
+	  <div class="container">
+	    <div class="progress" style="width:30em">
+	      <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:30%" >
+	        <span class="sr-only" style="width:5em">70% Complete</span>
+	      </div>
+	    </div>
+	  </div>
 
-    </br>
-    <hr>
-  <ul class=entries>
-  {% for entry in entries %}
-    <li><h2>{{ entry.title() }}</h2>{{ entry.text|safe }}
-  {% else %}
-    <li><em>Unbelievable.  No entries here so far</em>
-  {% endfor %}
-  </ul>
+      <button type="PLAY" onclick="play()" align="center"><img src="{{ url_for('static', filename='images/playbutton.png') }}" width="100%" /></button>
+      <audio id="audio" src="{{ url_for('static', filename='audio/test.wav') }}"></audio>
+
+      <!--<div class="current-file">-->
+          <table align="right" style="margin-bottom: 20px;">
+            <tr>
+              <th>File.wav</th>
+            </tr>
+            <tr>
+              <th>Length</th> 
+            </tr>
+            <tr>
+              <th>spkr</th>
+            </tr>
+            <tr>
+	          <th>label</th>
+            </tr>
+            <tr>
+              <th>on/off</th>
+            </tr>
+          </table>
+          <!--</div>-->
+  <div class="categories">
+      <ul class=entries>
+          {% for entry in entries %}
+            <li><input id="checkBox" type="checkbox"><h3>{{ entry.title() }}</p>
+          {% endfor %}
+      </ul>
+  </div>
 
 {% endblock %}
