finished first version of template

--- a/fineDi/templates/show_entries.html
+++ b/fineDi/templates/show_entries.html
@@ -49,7 +49,7 @@
       <!--<div class="current-file">-->
           <table align="right">
             <tr>
-              <th>File.wav</th>
+              <th>File.wav{{ url_for('static', filename=wav) }}</th>
             </tr>
             <tr>
               <th>Length</th> 
@@ -67,9 +67,12 @@
           <!--</div>-->
   <div class="categories">
       <ul class=entries>
+          <form method="post">
           {% for entry in entries %}
-            <li><input id="checkBox" type="checkbox"><h3>{{ entry.title() }}</p>
+          <li><input id="checkBox" name="trs_label" type="checkbox" value="{{ entry.title() }}"><label for="checkbox-1">{{ entry.title() }}</label>
           {% endfor %}
+          <input type="submit">
+          </form>
       </ul>
   </div>
 
