add arrows to navigate between wav + index page

--- a/fineDi/templates/layout.html
+++ b/fineDi/templates/layout.html
@@ -5,7 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div class=page>
-    <h1>Diarization Refinement Tool</h1>
+    <h1><a href="{{ url_for('index') }}">Diarization Refinement Tool</a></h1>
   <div class=metanav>
   </div>
   {% block body %}{% endblock %}
