--- a/fineDi/templates/show_entries.html
+++ b/fineDi/templates/show_entries.html
@@ -49,16 +49,16 @@
       <!--<div class="current-file">-->
           <table align="right">
             <tr>
-              <th>{{ wav }}{{ url_for('static', filename='audio/' + wav) }}</th>
+              <th>{{ wav }}</th>
             </tr>
             <tr>
               <th>Length</th> 
             </tr>
             <tr>
-              <th>spkr</th>
+              <th>Chi</th>
             </tr>
             <tr>
-	          <th>label</th>
+	          <th>laugh</th>
             </tr>
             <tr>
               <th>on/off</th>
