allow user to pick up where they left off last time

--- a/fineDi/templates/index.html
+++ b/fineDi/templates/index.html
@@ -2,7 +2,8 @@
 {% block body %}
   <div class="categories">
       <ul class=entries>
-          <li><a href="{{ url_for('treat_all_wavs', wav_name = wav) }}">Treat All The Wav Files</a></li>
+          <li><a href="{{ url_for('create_segments') }}">Treat All The Wav Files</a></li>
+          <li><a href="{{ url_for('pick_up') }}">Pick Up Where I Left Off</a></li>
       </ul>
   </div>
 
