--- a/fineDi/templates/show_entries.html
+++ b/fineDi/templates/show_entries.html
@@ -75,17 +75,21 @@
           {% for entry in entries %}
           <li><input id="checkBox" name="trs_label" type="checkbox" value="{{ entry.title() }}"><label for="checkbox-1">{{ entry.title() }}</label></li>
           {% endfor %}
-          <li><input type="submit"></li>
+          <li><input type="submit" onClick="window.location.reload()"></li>
           </form>
       </ul>
   </div>
   <div class="naviguate">
   {% if prev_wav %}
-      <a href="{{ url_for('treat_all_wavs', wav_name = prev_wav) }}"><img class="arrow" align="center" src="{{ url_for('static', filename='images/prev.png') }}" width="10%" /></a>
+      <a href="{{ url_for('treat_all_wavs', wav_name = prev_wav) }}"><img class="arrow-left" align="center" src="{{ url_for('static', filename='images/prev.png') }}" width="10%" /></a>
+  {% else %}
+      <a href="{{ url_for('index') }}"><img class="arrow-left" align="center" src="{{ url_for('static', filename='images/prev.png') }}" width="10%" /></a>
   {% endif %}
 
   {% if next_wav %}
-      <a href="{{ url_for('treat_all_wavs', wav_name = next_wav) }}"><img class="arrow" align="center"src="{{ url_for('static', filename='images/next.png') }}" width="10%" /></a>
+      <a href="{{ url_for('treat_all_wavs', wav_name = next_wav) }}"><img class="arrow-right" align="center"src="{{ url_for('static', filename='images/next.png') }}" width="10%" /></a>
+  {% else %}
+      <a href="{{ url_for('success') }}"><img class="arrow-right" align="center"src="{{ url_for('static', filename='images/next.png') }}" width="10%" /></a>
   {% endif %}
   </div>
 
