WIP adding possibility to choose task (speaker or label)

--- a/fineDi/templates/show_entries.html
+++ b/fineDi/templates/show_entries.html
@@ -58,13 +58,13 @@
                 <th>Segment Onset:  {{ descriptors[3] }}</th>
             </tr>
             <tr>
-                <th>Segment Duration:  {{ descriptors[1] }}</th> 
+                <th>Segment Duration:  {{ descriptors[1] }}</th>
             </tr>
             <tr>
-              <th>Speaker Name: Chi</th>
+                <th>Speaker Name: {{ descriptors[2] }}</th>
             </tr>
             <tr>
-                <th>Current Label:  {{ descriptors[2] }}</th>
+                <th>Current Label:  {{ descriptors[3] }}</th>
             </tr>
             <tr>
                 <th>Already Seen:  {{ lock }}</th>
