--- a/fineDi/static/style.css
+++ b/fineDi/static/style.css
@@ -1,23 +1,24 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+body              { font-family: sans-serif; background: #eee; }
+a, h1, h2         { color: #377ba8; }
+h1, h2            { font-family: 'Georgia', serif; margin: 0; }
+h1                { border-bottom: 2px solid #eee; }
+h2                { font-size: 1.2em; }
 
-.page           { margin: 1em auto; width: 45em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
-.wav_descript   { margin: 1em auto; overflow:hidden}
-.categories     { border: 1px solid black; padding: 25px; margin: 25px; }
-.progress-bar   { width: 4em; }
-.arrow-left     { display: inline-block; margin-left: 17em; margin-right: auto;}
-.arrow-right    { display: inline-block; margin-right: 10em; margin-left: auto; }
+.page             { margin: 1em auto; width: 45em; border: 5px solid #ccc;
+                    padding: 0.8em; background: white; }
+.entries          { list-style: none; margin: 0; padding: 0; }
+.entries li       { margin: 0.8em 1.2em; }
+.entries li h2    { margin-left: -1em; }
+.add-entry        { font-size: 0.9em; border-bottom: 1px solid #ccc; }
+.add-entry dl     { font-weight: bold; }
+.metanav          { text-align: right; font-size: 0.8em; padding: 0.3em;
+                    margin-bottom: 1em; background: #fafafa; }
+.flash            { background: #cee5F5; padding: 0.5em;
+                    border: 1px solid #aacbe2; }
+.error            { background: #f0d6d6; padding: 0.5em; }
+.wav_descript     { margin: 1em auto; overflow:hidden}
+.categories       { border: 1px solid black; padding: 25px; margin: 25px; }
+.progress-bar     { width: 4em; }
+.arrow-left       { display: inline-block; margin-left: 17em; margin-right: auto;}
+.arrow-right      { display: inline-block; margin-right: 10em; margin-left: auto; }
+ul.main > li > ul { display: none; }
