--- a/fineDi/templates/choose_column.html
+++ b/fineDi/templates/choose_column.html
@@ -3,7 +3,7 @@
   <div class="categories">
       <h3> Please select the field you want to edit during this session: </h3>
       <form method="post">
-          <input type="radio" name="task" value="label" checked><p>Label</p>
+          <input type="radio" name="task" value="label" checked><p>Vocal Maturity</p>
           <input type="radio" name="task" value="speaker"><p>Speaker</p>
           <input type="submit">
       </form>
