new branch for comparison cut vs whole modif launch_app for local reasons (macOS) added options in task added options in diarization modified path to audio file in show_entries to be able to call subdirectories

--- a/fineDi/templates/choose_column.html
+++ b/fineDi/templates/choose_column.html
@@ -5,6 +5,7 @@
       <form method="post">
           <input type="radio" name="task" value="label" checked><p>Vocal Maturity</p>
           <input type="radio" name="task" value="speaker"><p>Speaker</p>
+          <input type="radio" name="task" value="wholecut"><p>Whole vs 500</p>
           <input type="submit">
       </form>
   </div>
