added different options + summary + check nb of times each file was seen

--- a/fineDi/templates/choose_column.html
+++ b/fineDi/templates/choose_column.html
@@ -5,7 +5,9 @@
       <form method="post">
           <input type="radio" name="task" value="label" checked><p>Vocal Maturity</p>
           <input type="radio" name="task" value="speaker"><p>Speaker</p>
-          <input type="radio" name="task" value="wholecut"><p>Whole vs 500</p>
+          <input type="radio" name="task" value="wholecut_c"><p>Whole vs 500 - 500</p>
+          <input type="radio" name="task" value="wholecut_w1"><p>Whole vs 500 - whole, first pass</p>
+          <input type="radio" name="task" value="wholecut_w2"><p>Whole vs 500 - whole, second pass</p>
           <input type="submit">
       </form>
   </div>
