conversion to csv, write instructions on screen

--- a/fineDi/templates/show_entries.html
+++ b/fineDi/templates/show_entries.html
@@ -38,6 +38,11 @@
 }
 
 </style>
+    <div class="categories">
+      <h5> {{text}}</h5>
+      <h5> Keep in mind that your time is recorded, so take the time you need to play the clip as many times as you wish to make your decision, but please don't do something else while classifying the segments.</h5>
+
+    </div>
 	  <div class="wav_descript">
 	    <div class="progress" >
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{ progress }}%" >
